<resources>
    <string name="app_name">IM</string>
    <string name="login_greeting_1">Touch with</string>
    <string name="login_greeting_2">交流构筑世界</string>
    <string name="login_input_email">邮箱</string>
    <string name="login_input_password">密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_to_register">用户注册</string>
    <string name="login_login">登录</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_home">消息</string>
    <string name="main_contacts">联系人</string>
    <string name="main_settings">设置</string>
    <string name="register_title">用户注册</string>
    <string name="register_display_name">用户名（不超过20个字符）</string>
    <string name="register_email">邮箱</string>
    <string name="register_password">密码（不超过20个字符）</string>
    <string name="register_password_check">确认密码</string>
    <string name="register">注 册</string>
    <string name="register_email_format_error">请检查邮箱格式</string>
    <string name="register_password_length_error">密码长度过长</string>
    <string name="register_displayName_length_error">用户名长度过长</string>
    <string name="register_different_password_notice">两次输入的密码不一致</string>
    <string name="register_failed">注册失败</string>
    <string name="register_succeed">注册成功</string>
    <string name="add_friend">添加好友</string>
    <string name="new_friend">新的朋友</string>
    <string name="add_friend_input_email">请输入用户邮箱</string>
    <string name="friend_name">好友姓名</string>
    <string name="friend_email">好友邮箱</string>
    <string name="friend_move">移动至群组</string>
    <string name="friend_delete">删除该好友</string>
    <string name="friend_send_message">发消息</string>
    <string name="friend">好友信息</string>
    <string name="contact_new_friend">新的朋友</string>
    <string name="contact_new_group">创建新群组</string>
    <string name="group_new_group">新群组</string>
    <string name="group_name">群组名称</string>
    <string name="group_create">创建</string>
</resources>