<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/register_title"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/register_email"
        app:layout_constraintWidth_percent="0.75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:ems="13"
        android:minHeight="60dp"
        android:padding="16dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/register_password"
        app:layout_constraintWidth_percent="0.75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:minHeight="60dp"
        android:padding="16dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/register_password_check"
        app:layout_constraintWidth_percent="0.75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.4"
        android:hint="@string/register_password_check"
        android:inputType="textPassword"
        android:ems="13"
        android:minHeight="60dp"
        android:padding="16dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/register_display_name"
        app:layout_constraintWidth_percent="0.75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        android:hint="@string/register_display_name"
        android:inputType="text"
        android:ems="13"
        android:minHeight="60dp"
        android:padding="16dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/register"
        app:layout_constraintWidth_percent="0.75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.6"
        android:background="@color/light_blue"
        android:text="@string/register"
        android:onClick="register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:minHeight="50dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>