<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FriendActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/friend_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/friend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center"
            android:text="@string/friend"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="18dp" />
    </androidx.appcompat.widget.Toolbar>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/friend_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="32dp"
        android:src="@drawable/background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friend_toolbar"
        app:riv_corner_radius="24dp"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="repeat" />

    <TextView
        android:id="@+id/friend_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_name"
        app:layout_constraintLeft_toRightOf="@+id/friend_avatar"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/friend_avatar" />

    <TextView
        android:id="@+id/friend_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:text="@string/friend_email"
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_email_grey"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friend_avatar" />

    <TextView
        android:id="@+id/friend_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawablePadding="8dp"
        android:text="@string/friend_move"
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_move_group_24"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friend_email" />

    <TextView
        android:id="@+id/friend_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:text="@string/friend_delete"
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_person_remove_24"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friend_move" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward_ios_24"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@id/friend_email"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward_ios_24"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/friend_move"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/friend_to_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_frame_blue"
        android:minWidth="120dp"
        android:text="@string/friend_send_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/friend_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>