<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contacts.ContactsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/contact_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/contact_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center"
            android:text="@string/main_contacts"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/contact_new_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawablePadding="8dp"
        android:text="@string/contact_new_friend"
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_person_add_24"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_list_toolbar"
        android:onClick="toNewFriend"/>
    <TextView
        android:id="@+id/contact_new_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawablePadding="8dp"
        android:text="@string/contact_new_group"
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_move_group_24"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_new_friend"
        android:onClick="toNewGroup"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward_ios_24"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@id/contact_list_toolbar"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward_ios_24"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="@id/contact_new_group"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"/>

    <ExpandableListView
        android:id="@+id/contact_list_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:groupIndicator="@null"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_new_group" />

</androidx.constraintlayout.widget.ConstraintLayout>